Add some of the main translations for english and swedish

--- a/src/main/resources/assets/archivelocale/lang/en_US.json
+++ b/src/main/resources/assets/archivelocale/lang/en_US.json
@@ -1,6 +1,52 @@
 {
-  "archive.warps.desc1": "designed by",
-  "archive.warps.desc2": "capbara RICELAND1 xrayessay YoMoBoYo",
-  "archive.warps.desc3": "P529 did not help at all",
+  "archive.hotbar.warps": "Warps",
+  "archive.hotbar.warps.desc": "Right-click to open warps interface",
+  "archive.hotbar.teleport": "Teleport",
+  "archive.hotbar.teleport.desc1": "Left click: teleport forward",
+  "archive.hotbar.teleport.desc2": "Right click: teleport through",
+  "archive.hotbar.pearls": "Ender Pearl",
+  "archive.hotbar.rockets": "Rockets",
+  "archive.hotbar.flight": "Flight",
+  "archive.hotbar.flight.desc": "Enable/disable flight",
+  "archive.hotbar.apple": "Night Vision Apple",
+  "archive.hotbar.apple.desc": "15 minutes of Night Vision",
+  "archive.hotbar.milk": "Night-Vision-Remover",
+  "archive.hotbar.milk.desc": "drink to remove effects such as night vision",
+  "archive.hotbar.rwarp": "Random Warp",
+  "archive.hotbar.rwarp.desc1": "Warp to a random location",
+  "archive.hotbar.rwarp.desc2": "using this SMIB-coin",
+
+  "archive.mainmenu.title": "Warps",
+  "archive.mainmenu.lobby": "The Archive Lobby",
+  "archive.mainmenu.lobby.desc1": "designed by",
+  "archive.mainmenu.lobby.desc3": "P529 did not help at all",
+  "archive.mainmenu.2011": "established 2011",
+  "archive.mainmenu.2012": "established 2012",
+  "archive.mainmenu.2013": "established 2013",
+  "archive.mainmenu.2014": "established 2014",
+  "archive.mainmenu.2015": "established 2015",
+  "archive.mainmenu.2016.pre": "established 2015 pre-june",
+  "archive.mainmenu.2016.post": "established 2015 post-june",
+  "archive.mainmenu.2017": "established 2017",
+  "archive.mainmenu.2018": "established 2018",
+  "archive.mainmenu.2019": "established 2019",
+  "archive.mainmenu.2020": "established 2020",
+  "archive.mainmenu.2021": "established 2021",
+  "archive.mainmenu.2022": "established 2022",
+  "archive.mainmenu.2023": "established 2023",
+  "archive.mainmenu.2024": "established 2024",
+  "archive.mainmenu.new": "newly added",
+  "archive.mainmenu.groups": "groups / builders",
+  "archive.mainmenu.axis": "Along the Axes",
+  "archive.mainmenu.misc": "Miscellaneous",
+  "archive.mainmenu.unclear": "starting date unclear",
+  "archive.mainmenu.nether": "Nether Spawn",
+  "archive.mainmenu.overworld": "Overworld Spawn",
+  "archive.mainmenu.end": "The End Spawn",
+  "archive.mainmenu.const": "Constantiam Server",
+  "archive.mainmenu.survival": "Survival",
+  "archive.mainmenu.survival.desc1": "runs Minecraft 1.21.1 natively",
+  "archive.mainmenu.survival.desc2": "direct ip:",
+
   "archive.back": "Back"
 }
