--- a/src/main/resources/assets/archivelocale/lang/sv_SE.json
+++ b/src/main/resources/assets/archivelocale/lang/sv_SE.json
@@ -1,6 +1,52 @@
 {
-  "archive.warps.desc1": "designad av",
-  "archive.warps.desc2": "capbara RICELAND1 xrayessay YoMoBoYo",
-  "archive.warps.desc3": "P529 hjälpte inte alls",
+  "archive.hotbar.warps": "Warps",
+  "archive.hotbar.warps.desc": "Högerklicka för att öppna warps-menyn",
+  "archive.hotbar.teleport": "Teleportera",
+  "archive.hotbar.teleport.desc1": "Vänsterklick: teleportera framåt",
+  "archive.hotbar.teleport.desc2": "Högerklick: teleportera igenom",
+  "archive.hotbar.pearls": "Enderpärla",
+  "archive.hotbar.rockets": "Raketer",
+  "archive.hotbar.flight": "Flyg",
+  "archive.hotbar.flight.desc": "Aktivera/inaktivera flyg",
+  "archive.hotbar.apple": "Night Vision Äpple",
+  "archive.hotbar.apple.desc": "15 minuter av Night Vision",
+  "archive.hotbar.milk": "Night Vision Borttagare",
+  "archive.hotbar.milk.desc": "dryck för att ta bort effekter som mörkerseende",
+  "archive.hotbar.rwarp": "Slumpmässig warp",
+  "archive.hotbar.rwarp.desc1": "Teleportera till en slumpmässig plats",
+  "archive.hotbar.rwarp.desc2": "med detta SMIB-mynt",
+
+  "archive.mainmenu.title": "Warps",
+  "archive.mainmenu.lobby": "Arkivlobbyn",
+  "archive.mainmenu.lobby.desc1": "designad av",
+  "archive.mainmenu.lobby.desc3": "P529 hjälpte inte alls",
+  "archive.mainmenu.2011": "etablerad 2011",
+  "archive.mainmenu.2012": "etablerad 2012",
+  "archive.mainmenu.2013": "etablerad 2013",
+  "archive.mainmenu.2014": "etablerad 2014",
+  "archive.mainmenu.2015": "etablerad 2015",
+  "archive.mainmenu.2016.pre": "etablerad 2015 före juni",
+  "archive.mainmenu.2016.post": "etablerad 2015 efter juni",
+  "archive.mainmenu.2017": "etablerad 2017",
+  "archive.mainmenu.2018": "etablerad 2018",
+  "archive.mainmenu.2019": "etablerad 2019",
+  "archive.mainmenu.2020": "etablerad 2020",
+  "archive.mainmenu.2021": "etablerad 2021",
+  "archive.mainmenu.2022": "etablerad 2022",
+  "archive.mainmenu.2023": "etablerad 2023",
+  "archive.mainmenu.2024": "etablerad 2024",
+  "archive.mainmenu.new": "nyligen tillagd",
+  "archive.mainmenu.groups": "grupper / byggare",
+  "archive.mainmenu.axis": "Längs axlarna",
+  "archive.mainmenu.misc": "Övrigt",
+  "archive.mainmenu.unclear": "startdatum oklart",
+  "archive.mainmenu.nether": "Nether Spawn",
+  "archive.mainmenu.overworld": "Overworld Spawn",
+  "archive.mainmenu.end": "The End Spawn",
+  "archive.mainmenu.const": "Constantiam Server",
+  "archive.mainmenu.survival": "Överlevnad",
+  "archive.mainmenu.survival.desc1": "Minecraft 1.21.1 survival server",
+  "archive.mainmenu.survival.desc2": "direkt ip:",
+
   "archive.back": "Tillbaka"
 }
