--- a/src/main/resources/assets/archivelocale/lang/en_US.json
+++ b/src/main/resources/assets/archivelocale/lang/en_US.json
@@ -25,8 +25,8 @@
   "archive.mainmenu.2013": "established 2013",
   "archive.mainmenu.2014": "established 2014",
   "archive.mainmenu.2015": "established 2015",
-  "archive.mainmenu.2016.pre": "established 2015 pre-june",
-  "archive.mainmenu.2016.post": "established 2015 post-june",
+  "archive.mainmenu.2016.pre": "established 2016 pre-june",
+  "archive.mainmenu.2016.post": "established 2016 post-june",
   "archive.mainmenu.2017": "established 2017",
   "archive.mainmenu.2018": "established 2018",
   "archive.mainmenu.2019": "established 2019",
@@ -37,7 +37,7 @@
   "archive.mainmenu.2024": "established 2024",
   "archive.mainmenu.new": "newly added",
   "archive.mainmenu.groups": "groups / builders",
-  "archive.mainmenu.axis": "Along the Axes",
+  "archive.mainmenu.axis": "Along the Axis",
   "archive.mainmenu.misc": "Miscellaneous",
   "archive.mainmenu.unclear": "starting date unclear",
   "archive.mainmenu.nether": "Nether Spawn",
