--- a/src/main/resources/assets/archivelocale/lang/en_US.json
+++ b/src/main/resources/assets/archivelocale/lang/en_US.json
@@ -48,5 +48,12 @@
   "archive.mainmenu.survival.desc1": "runs Minecraft 1.21.1 natively",
   "archive.mainmenu.survival.desc2": "direct ip:",
 
-  "archive.back": "Back"
+  "archive.back": "Back",
+
+  "archive.header.row1": "§7A collection of builds from the servers",
+  "archive.header.row2": "§72builders2tools (2b2t) and Constantiam",
+  "archive.footer.row1": "§7clock in hotbar opens the /warps gui",
+  "archive.footer.help": "§6/help §7[§62§7|§63§7] for command help",
+  "archive.footer.address": "§8address: §7thearchive.world",
+  "archive.footer.contact": "§8contact: §7write.the.archive@gmail.com"
 }
