update axis key name. tab board formatting

--- a/src/main/resources/assets/archivelocale/lang/de_DE.json
+++ b/src/main/resources/assets/archivelocale/lang/de_DE.json
@@ -37,7 +37,7 @@
   "archive.mainmenu.2024": "2024 gegründet",
   "archive.mainmenu.new": "Neu hinzugefügt",
   "archive.mainmenu.groups": "Gruppen / Erbauer",
-  "archive.mainmenu.axis": "Entland der Achsen",
+  "archive.mainmenu.axes": "Entland der Achsen",
   "archive.mainmenu.misc": "Verschiedenes",
   "archive.mainmenu.unclear": "Unbekantes Startdatum",
   "archive.mainmenu.nether": "Nether Spawn",
