--- a/src/main/resources/assets/archivelocale/lang/nb_NO.json
+++ b/src/main/resources/assets/archivelocale/lang/nb_NO.json
@@ -50,10 +50,10 @@
 
   "archive.back": "Tilbake",
 
-  "archive.header.row1": "&7  En samling av byggverk fra serverne  ",
-  "archive.header.row2": "&7  2builders2tools (2b2t) og Constantiam  ",
-  "archive.footer.row1": "&7klokken i hotbaren åpner /warps-grensesnittet",
-  "archive.footer.help": "&6/help &7[&62&7|&63&7] for kommando-hjelp",
-  "archive.footer.address": "&8adresse: &7thearchive.world             ",
-  "archive.footer.contact": "&8kontakt: &7write.the.archive@gmail.com"
+  "archive.header.row1": "§7En samling av byggverk fra serverne",
+  "archive.header.row2": "§72builders2tools (2b2t) og Constantiam",
+  "archive.footer.row1": "§7klokken i hotbaren åpner /warps-grensesnittet",
+  "archive.footer.help": "§6/help §7[§62§7|§63§7] for kommando-hjelp",
+  "archive.footer.address": "§8adresse: §7thearchive.world",
+  "archive.footer.contact": "§8kontakt: §7write.the.archive@gmail.com"
 }
