--- a/src/main/resources/assets/archivelocale/lang/de_DE.json
+++ b/src/main/resources/assets/archivelocale/lang/de_DE.json
@@ -49,4 +49,11 @@
   "archive.mainmenu.survival.desc2": "IP Adrese:",
 
   "archive.back": "Zurück"
+
+  "archive.header.row1": "§7A Sammlung von Bauwerken der Server",
+  "archive.header.row2": "§72builders2tools (2b2t) und Constantiam",
+  "archive.footer.row1": "§7Die Uhr in der Hotbar öffnet die /warps Oberfläche",
+  "archive.footer.help": "§6/help §7[§62§7|§63§7] für Befehlshilfe",
+  "archive.footer.address": "§8Adresse: §7thearchive.world",
+  "archive.footer.contact": "§8Kontakt: §7write.the.archive@gmail.com"
 }
