fix typo in en_US.json

--- a/src/main/resources/assets/archivelocale/lang/en_US.json
+++ b/src/main/resources/assets/archivelocale/lang/en_US.json
@@ -37,7 +37,7 @@
   "archive.mainmenu.2024": "established 2024",
   "archive.mainmenu.new": "newly added",
   "archive.mainmenu.groups": "groups / builders",
-  "archive.mainmenu.axes": "Along the Axis",
+  "archive.mainmenu.axes": "Along the Axes",
   "archive.mainmenu.misc": "Miscellaneous",
   "archive.mainmenu.unclear": "starting date unclear",
   "archive.mainmenu.nether": "Nether Spawn",
